src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__season_details_ui__season_details_ui_tests__tests__snapshot_tests__season_details_ui_renders_episode_details_over_season_details.snap
---
source: src/ui/sonarr_ui/library/season_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
             ╭  Season 1 Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               
             │ Episodes │ History │ Manual Search                                                                                                    │               
             │──────╭  Episode Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────╮─────│               
             │   🏷  │ Details │ History │ File │ Manual Search                                                                                 │file │               
             │=> 🏷  │──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│p    │               
             │      │Some episode details:                                                                                                     │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      │                                                                                                                          │     │               
             │      ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯     │               
             │                                                                                                                                       │               
             ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
