src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__season_details_ui__season_details_ui_tests__tests__snapshot_tests__season_details_ui_renders_manual_search_tab.snap
---
source: src/ui/sonarr_ui/library/season_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
             ╭  Season 0 Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               
             │ Episodes │ History │ Manual Search                                                                                                    │               
             │───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│               
             │   Source    Age        ⛔     Title                          Indexer                  Size         Peers        Language  Quality      │               
             │=>           0 days                                                                   0.0 GB                                           │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
