src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__season_details_ui__season_details_ui_tests__tests__snapshot_tests__season_details_ui_renders_season_history_tab.snap
---
source: src/ui/sonarr_ui/library/season_details_ui_tests.rs
expression: output
---
                                                                                                                        
                                                                                                                        
          ╭  Season 0 Details  ─────────────────────────────────────────────────────────────────────────────╮           
          │ Episodes │ History │ Manual Search                                                              │           
          │─────────────────────────────────────────────────────────────────────────────────────────────────│           
          │   Source Title                       Event Type     Language    Quality      Date               │           
          │=>                                    unknown                                 1970-01-01 00:00:00│           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          │                                                                                                 │           
          ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯
